package com.wali.live.proto.BigTurnTable;

/**

java -jar -Dfile.encoding=UTF-8 ./proto/wire-compiler-2.3.0-SNAPSHOT-jar-with-dependencies.jar \
--proto_path=./proto --java_out=./modulewatch/src/main/java-gen-pb/ BigTurnTable.proto

*/


enum TurntableType {
    TYPE_128 = 0; //128钻
    TYPE_500 = 1; //500钻
}

//zhibo.turntable.start
message StartTurntableReq {
    required uint64 zuid = 1;
    optional string liveId = 2;
    optional TurntableType type = 3; //转盘类型 0:128钻，1:500钻
    optional string customPrizeName = 4; //自定义奖项名字
}

message StartTurntableRsp {
    required uint32 retCode = 1; //0表示成功
}

//zhibo.turntable.stop
message StopTurntableReq {
    required uint64 zuid = 1;
    optional string liveId = 2;
    optional TurntableType type = 3; //转盘类型 0:128钻，1:500钻
}

message StopTurntableRsp {
    required uint32 retCode = 1; //0表示成功
}

//zhibo.turntable.draw
message DrawTurntableReq {
    required uint64 uuid = 1;
    required uint64 zuid = 2;
    optional string liveId = 3;
    optional TurntableType type = 4; //转盘类型 0:128钻，1:500钻
}

message DrawTurntableRsp {
    required uint32 retCode = 1; //0表示成功
    optional uint32 prizeIndex = 2; //奖品索引, 顺序从1点钟方向开始顺时针，index从0开始
    optional string prizeKey = 3; //此次中奖的key,客户端在zhibo.turntable.reward里传这个值用于获取此次抽奖的奖品
}


//zhibo.turntable.reward
message RewardTurntableReq {
    required uint64 uuid = 1;
    required uint64 zuid = 2;
    optional string liveId = 3;
    optional string prizeKey = 4; //此次中奖的key
}

message RewardTurntableRsp {
    required uint32 retCode = 1; //0表示成功
    optional uint64 user_asset_timestamp = 2;// 购买者当前可用资产时间戳（只有是送给主播的奖品服务器才下发这个字段）
    optional VGiftCard gift_card = 3;//礼品卡列表（只有是送给主播的奖品服务器才下发这个字段）
    optional uint32 receiver_total_tickets = 4;// 主播此时的票数
}


// 虚拟礼物卡
message VGiftCard{
    optional uint32 gift_id         = 1;//礼品卡可兑换的礼物Id
    optional uint32 gift_card_cnt   = 2;//礼品卡数量
    optional uint64 end_time        = 3;//礼品卡有效期结束时间,单位s
}

message TurntableConfig {
    optional TurntablePreConfig preConfig = 1;
    optional uint32 status = 2; //0:未开启, 1:已开启
}

enum ToWhom {
    ANCHOR = 0; //主播
    SELF = 1; //用户自己
}
enum GiftType {
    VIRTUAL_GIFT = 0;
    VIRTUAL_DIAMOND = 1;
}

message PrizeItem {
    optional GiftType giftType = 1; //奖品类型
    optional uint32 num = 2; //奖品个数
    optional uint32 giftId = 3; //giftType是虚拟礼物有效
    optional ToWhom toWhom = 4; //奖品发给谁
    optional string times = 5; //giftType是虚拟钻石时用于展示发放多少倍的钻石数
    optional bool isCustom = 6; //是否是主播自定义奖项
    optional string customPrizeName = 7; //自定义奖项名字,isCustom为true读取
    optional string giftName = 8; //礼物名字,服务器内部使用，不对客户端下发
    optional uint32 giftValue = 9; //单个礼物价值
    optional bool needGlobalMsg = 10; //是否需要发送全局push,服务器内部使用，不对客户端下发
}

message TurntablePreConfig {
    optional TurntableType type = 1; //转盘类型
    optional uint32 startCost = 2; //开启需要的钻石数
    optional uint32 drawCost = 3; //一次抽奖需要的钻石数
    repeated PrizeItem prizeItem = 4; //奖品内容
}




//大转盘直播间push
//msg_type: 802  大转盘消息
message TurntablePush {
    optional TurntableConfig turntableConfig = 1; //直播间大转盘内容
}